--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
   padding: 20px 80px;
   background: rgb(0, 0, 0);
   box-shadow: 0 5px 15px rgb(0, 0, 0, 0.06);
@@ -144,6 +145,16 @@ input[type="checkbox"] {
 @media (max-width: 1000px) {
   nav {
     padding: 0 40px 0 50px;
+  }
+}
+
+.ima-con {
+  width: 100%;
+}
+
+@media screen and (min-width: 200px) {
+  .ima-con {
+    width: 320px;
   }
 }
 
